--- a/Spotify-Clone/Views/PlayListCollectionViewCell.xib
+++ b/Spotify-Clone/Views/PlayListCollectionViewCell.xib
@@ -33,11 +33,9 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aSg-Vf-bOG" userLabel="menu">
-                                <rect key="frame" x="617" y="0.0" width="37" height="31"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="chevron.forward" catalog="system"/>
-                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.forward" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3NE-3G-LUw">
+                                <rect key="frame" x="641.5" y="2" width="12.5" height="16.5"/>
+                            </imageView>
                         </subviews>
                     </stackView>
                 </subviews>
@@ -52,7 +50,7 @@
             <size key="customSize" width="654" height="169"/>
             <connections>
                 <outlet property="artistImage" destination="aSC-NS-qsu" id="fdO-6i-kag"/>
-                <outlet property="menuButton" destination="aSg-Vf-bOG" id="bKI-fd-Q3T"/>
+                <outlet property="nextButtonImage" destination="3NE-3G-LUw" id="5Gj-xO-mc8"/>
                 <outlet property="songName" destination="7Qz-TF-eIy" id="lz0-4o-EaE"/>
             </connections>
             <point key="canvasLocation" x="18.840579710144929" y="138.95089285714286"/>
