--- a/Spotify-Clone/Views/PlaySongViewController.xib
+++ b/Spotify-Clone/Views/PlaySongViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="endTimeLabel" destination="Ran-Ep-ur0" id="Jl3-hV-eZO"/>
                 <outlet property="favButton" destination="6Si-dU-v2Z" id="BND-U4-aJx"/>
                 <outlet property="forwardButton" destination="kRb-i2-QU0" id="dEU-9E-p6L"/>
+                <outlet property="loopButton" destination="NC8-G4-A0v" id="YLq-F2-ayO"/>
                 <outlet property="nextButton" destination="ike-yh-NoI" id="chr-Nh-3nE"/>
                 <outlet property="playButton" destination="vPF-CP-jWy" id="2PP-AK-O93"/>
                 <outlet property="prevButton" destination="Zwq-Wj-peu" id="Az1-gP-zRv"/>
@@ -95,8 +96,16 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="rcj-aU-QJH">
                                     <rect key="frame" x="0.0" y="420.5" width="382" height="40"/>
                                     <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NC8-G4-A0v">
+                                            <rect key="frame" x="0.0" y="0.0" width="56.5" height="40"/>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" title="Loop"/>
+                                            <connections>
+                                                <action selector="loopSong:" destination="-1" eventType="touchUpInside" id="eK2-mW-GAO"/>
+                                            </connections>
+                                        </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vNb-dc-gbc" userLabel="backward">
-                                            <rect key="frame" x="0.0" y="0.0" width="50.5" height="40"/>
+                                            <rect key="frame" x="75" y="0.0" width="50.5" height="40"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="backward.fill" catalog="system"/>
                                             <connections>
@@ -104,7 +113,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zwq-Wj-peu" userLabel="previous">
-                                            <rect key="frame" x="88" y="0.0" width="45.5" height="40"/>
+                                            <rect key="frame" x="144.5" y="0.0" width="45.5" height="40"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="backward.end.fill" catalog="system"/>
                                             <connections>
@@ -112,7 +121,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-CP-jWy" userLabel="play">
-                                            <rect key="frame" x="171" y="0.0" width="40" height="40"/>
+                                            <rect key="frame" x="208.5" y="0.0" width="40" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="40" id="Wgf-9a-FOd"/>
                                                 <constraint firstAttribute="height" constant="40" id="ous-gr-Ehb"/>
@@ -124,7 +133,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ike-yh-NoI" userLabel="next">
-                                            <rect key="frame" x="248.5" y="0.0" width="45.5" height="40"/>
+                                            <rect key="frame" x="267.5" y="0.0" width="45.5" height="40"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="forward.end.fill" catalog="system"/>
                                             <connections>
