--- a/Spotify-Clone/Views/LoginViewController.xib
+++ b/Spotify-Clone/Views/LoginViewController.xib
@@ -11,6 +11,7 @@
             <connections>
                 <outlet property="backButton" destination="c2j-7O-KAx" id="FgN-Uz-pbi"/>
                 <outlet property="emailTextField" destination="Z87-pn-cwI" id="GuM-Eh-4q9"/>
+                <outlet property="loadingIndicator" destination="eqv-o5-Q7N" id="QRf-vq-smR"/>
                 <outlet property="loadingLabel" destination="8FW-5T-XUd" id="OIO-62-ZsA"/>
                 <outlet property="loginButton" destination="PEQ-nS-BOC" id="GvW-S8-fJW"/>
                 <outlet property="loginLabel" destination="Qjc-oz-xDC" id="bE7-eK-yXU"/>
@@ -24,7 +25,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="gAG-VU-aUt" userLabel="Parent SV">
-                    <rect key="frame" x="16" y="40" width="992" height="365.5"/>
+                    <rect key="frame" x="16" y="40" width="992" height="401.5"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c2j-7O-KAx" userLabel="backButton">
                             <rect key="frame" x="0.0" y="0.0" width="992" height="31"/>
@@ -35,7 +36,7 @@
                             </connections>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="tSb-0D-beL" userLabel="Login SV">
-                            <rect key="frame" x="0.0" y="71" width="992" height="234"/>
+                            <rect key="frame" x="0.0" y="71" width="992" height="270"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qjc-oz-xDC">
                                     <rect key="frame" x="0.0" y="0.0" width="992" height="36"/>
@@ -71,10 +72,13 @@
                                         <action selector="loginButtonPressed:" destination="-1" eventType="touchUpInside" id="7z9-iC-prx"/>
                                     </connections>
                                 </button>
+                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="eqv-o5-Q7N">
+                                    <rect key="frame" x="0.0" y="250" width="992" height="20"/>
+                                </activityIndicatorView>
                             </subviews>
                         </stackView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8FW-5T-XUd">
-                            <rect key="frame" x="0.0" y="345" width="992" height="20.5"/>
+                            <rect key="frame" x="0.0" y="381" width="992" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -83,7 +87,6 @@
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <accessibility key="accessibilityConfiguration" identifier="loginViewController"/>
             <constraints>
                 <constraint firstItem="gAG-VU-aUt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="FnA-vW-Dvh"/>
